[tool.poetry]
name = "ersystestapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.scripts]
api = "ersystestapi:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
